--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@hijiriworld/intuitive-custom-post-order",
+	"name": "intuitive-custom-post-order",
 	"version": "3.1.3",
 	"description": "Intuitively order items (Posts, Pages, Custom Post Types, Custom Taxonomies, etc.) using drag and drop.",
 	"author": "Timo Hubois <t.hubois@pixelsaft.de>",
@@ -30,6 +30,7 @@
 		"lint:js:fix": "npm run lint:js -- --fix",
 		"lint:css:fix": "npm run lint:css -- --fix",
 		"lint:php:fix": "./vendor/bin/phpcbf",
-		"packages-update": "wp-scripts packages-update"
+		"packages-update": "wp-scripts packages-update",
+		"plugin-zip": "wp-scripts plugin-zip && mkdir -p tmp && cp -r css tmp/ && cp -r js tmp/ && cd tmp && zip -r ../intuitive-custom-post-order.zip ./* && cd .. && rm -rf tmp && zip -d intuitive-custom-post-order.zip README.md",
 	}
 }
